skills/rite/machine/grammar.ebnf
(* Rite grammar.
   Descriptive, not normative: the parser in crates/rite-syntax is the definition,
   and where the two disagree this file is the one that is wrong. It described a
   pipeline precedence the parser had abandoned, omitted six operators, and claimed
   three productions that did not parse at all — and rite-doc copies it verbatim into
   the agent bundle, so the drift was published. *)

program          = { item | statement } ;

item             = function_decl
                 | data_decl
                 | event_decl
                 | import_decl
                 | test_decl ;

(* No type_params: generics are not implemented. Parameter and return annotations
   are, and are enforced at runtime — see docs/book/functions.md. *)
function_decl    = [ "pub" ] def_kw [ effect_kw ] identifier
                   "(" [ parameter_list ] ")"
                   [ return_annotation ] block ;

(* `def Name ⟨field: T⟩` is not implemented; a data declaration binds a record
   literal. *)
data_decl        = def_kw identifier record_literal ;

event_decl       = def_kw ( "item" | "room" | "world" ) atom block ;

test_decl        = def_kw "test" string_literal block ;

import_decl      = "use" module_path [ ( "as" | "->" ) identifier ] ;
                   (* ASCII prints `as`, glyph prints `→`; both parse in either dialect *)

statement        = binding
                 | expression
                 | return_expr
                 | assignment
                 | say_stmt
                 | unless_stmt
                 | for_stmt
                 | while_stmt
                 | loop_stmt
                 | break_stmt
                 | continue_stmt ;

(* Statement sugar. Each lowers in the parser itself — `for` to `iter → each`,
   `while` to a pair of closures, `loop n` to `range(0, n) → each` — see
   docs/book/sugar.md. *)
say_stmt         = say_kw expression ;
unless_stmt      = unless_kw expression block [ ( ":" | "else" ) block ] ;
for_stmt         = for_kw identifier in_kw expression block ;
while_stmt       = "while" expression block ;
loop_stmt        = "loop" expression block ;
(* Statements only inside a for/while/loop body; a closure boundary resets
   that, checked at resolve time. *)
break_stmt       = break_kw ;
continue_stmt    = continue_kw ;

binding          = pattern ( bind_op | mutable_bind_op ) expression ;
assignment       = identifier ":=" expression ;

expression       = pipeline ;

(* `→` is looser than every binary operator, so its input reads as written:
   `a + b → str` is `(a + b) → str`. A binary operator *after* a pipeline is a parse
   error (E015) — nothing below this level can consume one. *)
pipeline         = coalesce { pipe_op pipeline_stage } ;

pipeline_stage   = call_expr
                 | member_expr
                 | identifier
                 | block
                 | placeholder ;

conditional      = if_kw expression block [ ":" block ]
                 | match_expr
                 | pipeline ;

coalesce         = logic_or { "??" logic_or } ;

match_expr       = match_kw expression block ;

match_arm        = or_pattern [ if_kw guard_expr ] pipe_op expression ;
(* The guard sits below pipeline precedence: the arrow after it is the arm's
   own. A pipeline inside a guard needs parentheses. *)
guard_expr       = coalesce ;
or_pattern       = pattern { "|" pattern } ;

logic_or         = logic_xor { "or" logic_xor } ;
logic_xor        = logic_and { xor_op logic_and } ;
logic_and        = equality { "and" equality } ;
equality         = comparison { ( "=" | "!=" ) comparison } ;
comparison       = range_expr { ( "<" | "<=" | ">" | ">=" | in_kw | not_in_kw ) range_expr } ;
(* Non-associative, and lowered to range/range_incl calls in desugar — but retained
   as operators in the AST, so `rite fmt` prints back what was written. *)
range_expr       = term [ ( ".." | range_incl_op ) term ] ;
term             = factor { ( "+" | "-" ) factor } ;
factor           = power { ( "*" | "/" | "%" | idiv_op ) power } ;
power            = compose { "**" power } ;   (* right-associative *)
compose          = unary { compose_op unary } ;
unary            = [ "-" | "not" | effect_kw ] postfix ;

postfix          = call_expr { "?" } ;  (* postfix ? is try-unwrap *)

call_expr        = primary { call_suffix | member_suffix | index_suffix } ;
call_suffix      = "(" [ argument_list ] ")" ;
member_suffix    = "." identifier ;
index_suffix     = "[" expression "]" ;

primary          = literal
                 | identifier
                 | atom
                 | list_literal
                 | record_literal
                 | block
                 | "(" expression ")"
                 | capability_ref
                 | placeholder
                 | http_listen
                 | tcp_listen
                 | route_decl ;

capability_ref   = host_kw identifier { "." identifier } ;

http_listen      = host_kw "http" "." "listen" expression block ;
(* Sugar only: parses to the call `@tcp.listen(expression, block)`, whose block
   argument is a closure like any other. The block's parameter binds the accepted
   connection. *)
tcp_listen       = host_kw "tcp" "." "listen" expression block ;
route_decl       = http_method string_literal [ parameter_header ] block ;
http_method      = "GET" | "POST" | "PUT" | "PATCH" | "DELETE" | "HEAD" | "OPTIONS" ;

block            = block_open [ parameter_header ] { item | statement | match_arm | route_decl | middleware } block_close
                 | "{" [ parameter_header ] { item | statement } "}" ;

parameter_header = "|" [ parameter_list ] "|" ;
middleware       = "use" expression ;

list_literal     = "[" [ expression { "," expression } [ "," ] ] "]" ;
record_literal   = record_open [ record_entry { "," record_entry } [ "," ] ] record_close ;
record_entry     = ( identifier | string_literal | atom ) ":" expression ;

pattern          = identifier
                 | atom
                 | literal
                 | "_"
                 | list_pattern
                 | record_pattern
                 | option_pattern
                 | result_pattern ;

list_pattern     = "[" [ pattern { "," pattern } [ "," ".." pattern ] ] "]" ;
record_pattern   = record_open [ pattern_field { "," pattern_field } ] record_close ;
result_pattern   = ( "ok" | "err" | "some" | "none" ) [ pattern ] ;

return_expr      = return_kw [ expression ] ;

literal          = number | string_literal | raw_string | "true" | "false" | "none" ;
(* `r"…"` — no escapes, no interpolation, every character literal. There is no
   `r#"…"#` form, so a raw string cannot contain a double quote. *)
raw_string       = 'r"' { any_char_except_quote } '"' ;
atom             = atom_kw identifier { "." identifier } ;
placeholder      = "$" ;

def_kw           = "◆" | "def" ;
bind_op          = "←" | "<-" ;
mutable_bind_op  = "↢" | "<~" ;
pipe_op          = "→" | "->" ;
xor_op           = "⊻" | "xor" ;
range_incl_op    = "‥" | "..=" ;
(* Glyph-only: `idiv` and `compose` are builtin function names, so neither can be an
   infix keyword. `rite fmt` prints these as calls in the ASCII dialect. *)
idiv_op          = "÷" ;
compose_op       = "∘" ;
return_kw        = "^" | "return" ;
if_kw            = "?" | "if" ;
match_kw         = "~" | "match" ;
(* Marks an effectful statement, and on a declaration marks the function as
   performing host effects — which makes callers mark the call. *)
effect_kw        = "!" | "do" ;
host_kw          = "@" | "host." ;
atom_kw          = "#" | ":" ;
block_open       = "⟦" | "[[" ;
block_close      = "⟧" | "]]" ;
record_open      = "⟨" | "<<" ;
record_close     = "⟩" | ">>" ;
in_kw            = "∈" | "in" ;
not_in_kw        = "∉" | "not" "in" ;
say_kw           = "¶" | "say" ;
unless_kw        = "¿" | "unless" ;
for_kw           = "∀" | "for" ;
break_kw         = "∎" | "break" ;
continue_kw      = "⟳" | "continue" ;
