crates/rite-syntax/src/parser.rs
use crate::ast::*;
use crate::token::{Token, TokenKind};
use rite_core::{
    simple_error, Diagnostics, FileId, Span, E010_UNEXPECTED_TOKEN, E011_EXPECTED_TOKEN,
    E012_UNCLOSED_DELIMITER, E013_INVALID_SYNTAX,
};

pub struct Parser {
    file: FileId,
    tokens: Vec<Token>,
    pos: usize,
    diagnostics: Diagnostics,
    /// When false, `status ⟦…⟧` is not treated as a call (needed for `~ status ⟦…⟧`).
    allow_trailing_block: bool,
}

pub fn parse(file: FileId, tokens: &[Token]) -> (Option<Program>, Diagnostics) {
    let filtered: Vec<Token> = tokens
        .iter()
        .filter(|t| !t.kind.is_trivia())
        .cloned()
        .collect();
    let mut p = Parser {
        file,
        tokens: filtered,
        pos: 0,
        diagnostics: Diagnostics::new(),
        allow_trailing_block: true,
    };
    let program = p.parse_program();
    (Some(program), p.diagnostics)
}

pub fn parse_expression(file: FileId, tokens: &[Token]) -> (Option<Expr>, Diagnostics) {
    let filtered: Vec<Token> = tokens
        .iter()
        .filter(|t| !t.kind.is_trivia())
        .cloned()
        .collect();
    let mut p = Parser {
        file,
        tokens: filtered,
        pos: 0,
        diagnostics: Diagnostics::new(),
        allow_trailing_block: true,
    };
    let expr = p.parse_expression();
    (Some(expr), p.diagnostics)
}

impl Parser {
    fn parse_program(&mut self) -> Program {
        let start = self.current_span();
        let mut items = Vec::new();
        while !self.is_eof() {
            // Skip stray semicolons
            if self.check(TokenKind::Semicolon) {
                self.advance();
                continue;
            }
            if let Some(item) = self.parse_item_or_stmt() {
                items.push(item);
            } else {
                // recovery: skip token
                self.advance();
            }
        }
        let end = self.prev_span();
        Program {
            file: self.file,
            items,
            span: start.merge(end),
        }
    }

    fn parse_item_or_stmt(&mut self) -> Option<Item> {
        if self.check(TokenKind::Use) {
            return Some(Item::Import(self.parse_import(false)));
        }
        // `pub use path` re-export
        if self.check(TokenKind::Pub) && self.check_nth(1, TokenKind::Use) {
            self.advance(); // pub
            return Some(Item::Import(self.parse_import(true)));
        }
        if self.check(TokenKind::Pub) || self.check(TokenKind::Def) {
            return Some(self.parse_decl_item());
        }
        // Match arms at top level shouldn't appear; statements
        let stmt = self.parse_statement()?;
        Some(Item::Statement(stmt))
    }

    fn parse_decl_item(&mut self) -> Item {
        let is_pub = if self.check(TokenKind::Pub) {
            self.advance();
            true
        } else {
            false
        };

        self.expect(TokenKind::Def);
        // test decl
        if self.check(TokenKind::Test) {
            self.advance();
            let name_tok = self.expect(TokenKind::String);
            let name = name_tok.text.clone();
            let body = self.parse_block();
            let span = name_tok.span.merge(body.span);
            return Item::Test(TestDecl { name, body, span });
        }
        // event: item/room/world
        if matches!(
            self.peek_kind(),
            TokenKind::Item | TokenKind::Room | TokenKind::World
        ) {
            let kind = match self.advance().kind {
                TokenKind::Item => EventKind::Item,
                TokenKind::Room => EventKind::Room,
                TokenKind::World => EventKind::World,
                _ => unreachable!(),
            };
            let atom = self.parse_atom_lit();
            let body = self.parse_block();
            let span = atom.span.merge(body.span);
            return Item::Event(EventDecl {
                kind,
                atom,
                body,
                span,
            });
        }

        let name = self.parse_ident();
        // data decl: def Name ⟨...⟩ without parens
        if self.check(TokenKind::RecordOpen) {
            let rec = self.parse_record_literal();
            if let Expr::Record(r) = rec {
                return Item::Data(DataDecl {
                    name,
                    fields: r.entries,
                    span: r.span,
                });
            }
        }

        self.expect(TokenKind::LParen);
        let params = self.parse_param_list(TokenKind::RParen);
        self.expect(TokenKind::RParen);
        let return_type = if self.check(TokenKind::Arrow) {
            self.advance();
            Some(self.parse_type_expr())
        } else {
            None
        };
        let body = self.parse_block();
        let span = name.span.merge(body.span);
        Item::Function(FunctionDecl {
            is_pub,
            name,
            params,
            return_type,
            body,
            doc: None,
            span,
        })
    }

    fn parse_import(&mut self, is_pub: bool) -> ImportDecl {
        let start = self.advance().span; // use
        let path = self.parse_module_path();
        let alias = if self.check(TokenKind::As) {
            self.advance();
            Some(self.parse_ident())
        } else {
            None
        };
        let end = alias.as_ref().map(|a| a.span).unwrap_or(path.span);
        ImportDecl {
            path,
            alias,
            is_pub,
            span: start.merge(end),
        }
    }

    fn parse_module_path(&mut self) -> ModulePath {
        // Relative: `./helpers`, `../lib/util` (slash-separated after ./ or ../)
        if self.check(TokenKind::Dot) {
            let start = self.peek().span;
            self.advance(); // first .
            let parent = if self.check(TokenKind::Dot) {
                self.advance();
                true
            } else {
                false
            };
            if self.check(TokenKind::Slash) {
                self.advance();
            }
            let mut segments = vec![Ident {
                name: if parent { "..".into() } else { ".".into() },
                span: start,
            }];
            segments.push(self.parse_ident());
            while self.check(TokenKind::Slash) || self.check(TokenKind::Dot) {
                self.advance();
                segments.push(self.parse_ident());
            }
            let span = start.merge(segments.last().map(|s| s.span).unwrap_or(start));
            return ModulePath { segments, span };
        }

        let mut segments = vec![self.parse_ident()];
        while self.check(TokenKind::Dot) {
            self.advance();
            segments.push(self.parse_ident());
        }
        let span = segments
            .first()
            .map(|s| s.span)
            .unwrap_or(Span::DUMMY)
            .merge(segments.last().map(|s| s.span).unwrap_or(Span::DUMMY));
        ModulePath { segments, span }
    }

    fn parse_statement(&mut self) -> Option<Stmt> {
        if self.check(TokenKind::Return) {
            let start = self.advance().span;
            let value = if self.at_expr_start() {
                // Support `^ 200 ⟨…⟩` / `^ 200 "text"` as multi-value return (status, body, …)
                let first = self.parse_expression();
                if self.at_expr_start()
                    && !self.check(TokenKind::Arrow)
                    && !self.check(TokenKind::Bind)
                    && !self.check(TokenKind::BindMut)
                {
                    let mut elements = vec![first];
                    while self.at_expr_start()
                        && !self.check(TokenKind::Arrow)
                        && !self.check(TokenKind::Semicolon)
                        && !self.check(TokenKind::BlockClose)
                        && !self.check(TokenKind::RBrace)
                    {
                        // Don't consume next statement-like constructs unboundedly
                        let checkpoint = self.pos;
                        let next = self.parse_expression();
                        // Stop if we over-consumed a new binding-like form
                        if self.check(TokenKind::Bind) || self.check(TokenKind::BindMut) {
                            self.pos = checkpoint;
                            break;
                        }
                        elements.push(next);
                        if elements.len() >= 3 {
                            break;
                        }
                    }
                    let span = elements
                        .first()
                        .map(|e| e.span())
                        .unwrap_or(start)
                        .merge(elements.last().map(|e| e.span()).unwrap_or(start));
                    Some(Expr::List(ListExpr { elements, span }))
                } else {
                    Some(first)
                }
            } else {
                None
            };
            let end = value.as_ref().map(|e| e.span()).unwrap_or(start);
            if self.check(TokenKind::Semicolon) {
                self.advance();
            }
            return Some(Stmt::Return(ReturnStmt {
                value,
                span: start.merge(end),
            }));
        }

        // Lookahead for binding: pattern bind_op expr
        // Heuristic: ident/pattern then Bind/BindMut
        let checkpoint = self.pos;
        if let Some(pat) = self.try_parse_binding_pattern() {
            if self.check(TokenKind::Bind) || self.check(TokenKind::BindMut) {
                let mutable = self.check(TokenKind::BindMut);
                self.advance();
                let value = self.parse_expression();
                let span = pattern_span(&pat).merge(value.span());
                if self.check(TokenKind::Semicolon) {
                    self.advance();
                }
                return Some(Stmt::Binding(Binding {
                    pattern: pat,
                    mutable,
                    value,
                    span,
                }));
            }
        }
        self.pos = checkpoint;

        // assignment: ident := or op-assign += -= *= /= %=
        if self.check(TokenKind::Ident) && self.pos + 1 < self.tokens.len() {
            let next = self.tokens[self.pos + 1].kind;
            let op = match next {
                TokenKind::Assign => Some(None),
                TokenKind::PlusAssign => Some(Some(BinOp::Add)),
                TokenKind::MinusAssign => Some(Some(BinOp::Sub)),
                TokenKind::StarAssign => Some(Some(BinOp::Mul)),
                TokenKind::SlashAssign => Some(Some(BinOp::Div)),
                TokenKind::PercentAssign => Some(Some(BinOp::Rem)),
                _ => None,
            };
            if let Some(op) = op {
                let name = self.parse_ident();
                self.advance(); // := or op=
                let value = self.parse_expression();
                let span = name.span.merge(value.span());
                if self.check(TokenKind::Semicolon) {
                    self.advance();
                }
                return Some(Stmt::Assign(Assign {
                    name,
                    op,
                    value,
                    span,
                }));
            }
        }

        // for x in xs ⟦ … ⟧  /  ∀ x ∈ xs ⟦ … ⟧
        if self.check(TokenKind::For) || self.check(TokenKind::ForAll) {
            return Some(self.parse_for_in_stmt());
        }

        // say / ¶ expr  →  ! @console.println(expr)
        if self.check(TokenKind::Say) || self.check(TokenKind::Paragraph) {
            let start = self.advance().span;
            let value = self.parse_expression();
            let span = start.merge(value.span());
            if self.check(TokenKind::Semicolon) {
                self.advance();
            }
            return Some(Stmt::Expr(Expr::Unary(UnaryExpr {
                op: UnaryOp::Effect,
                expr: Box::new(Expr::Call(CallExpr {
                    callee: Box::new(Expr::Capability(CapabilityRef {
                        path: vec!["console".into(), "println".into()],
                        span,
                    })),
                    args: vec![value],
                    span,
                })),
                span,
            })));
        }

        // unless / ¿ cond ⟦ … ⟧
        if self.check(TokenKind::Unless) {
            let start = self.advance().span;
            let prev = self.allow_trailing_block;
            self.allow_trailing_block = false;
            let condition = self.parse_expression();
            self.allow_trailing_block = prev;
            let then_branch = self.parse_block();
            let else_branch = if self.check(TokenKind::Colon) || self.check(TokenKind::Else) {
                self.advance();
                Some(self.parse_block())
            } else {
                None
            };
            let end = else_branch
                .as_ref()
                .map(|b| b.span)
                .unwrap_or(then_branch.span);
            let not_cond = Expr::Unary(UnaryExpr {
                op: UnaryOp::Not,
                expr: Box::new(condition),
                span: start,
            });
            return Some(Stmt::Expr(Expr::If(IfExpr {
                condition: Box::new(not_cond),
                then_branch,
                else_branch,
                span: start.merge(end),
            })));
        }

        // while cond ⟦ … ⟧ — desugar to recursive local helper via special form
        if self.check(TokenKind::While) {
            return Some(self.parse_while_stmt());
        }

        // loop n ⟦ … ⟧ — iterate n times
        if self.check(TokenKind::Loop) {
            return Some(self.parse_loop_stmt());
        }

        if self.at_expr_start() {
            let expr = self.parse_expression();
            if self.check(TokenKind::Semicolon) {
                self.advance();
            }
            return Some(Stmt::Expr(expr));
        }
        None
    }

    fn parse_for_in_stmt(&mut self) -> Stmt {
        let start = self.advance().span; // for / ∀
        let var = self.parse_ident();
        // in / ∈
        if self.check(TokenKind::In) {
            self.advance();
        } else {
            self.error_expected("in / ∈");
        }
        let prev = self.allow_trailing_block;
        self.allow_trailing_block = false;
        let iter = self.parse_expression();
        self.allow_trailing_block = prev;
        let body = self.parse_block();
        let span = start.merge(body.span);
        // Desugar: iter → each { |var| body }
        let stage = Expr::Call(CallExpr {
            callee: Box::new(Expr::Ident(Ident {
                name: "each".into(),
                span,
            })),
            args: vec![Expr::Block(Block {
                params: vec![Param {
                    name: var,
                    ty: None,
                    span,
                }],
                body: body.body,
                span: body.span,
            })],
            span,
        });
        Stmt::Expr(Expr::Pipeline(PipelineExpr {
            input: Box::new(iter),
            stages: vec![stage],
            span,
        }))
    }

    fn parse_while_stmt(&mut self) -> Stmt {
        // while cond ⟦ body ⟧  →  invoke a small recursive loop via __while sugar:
        // desugar to: (◆ __w() ⟦ ? cond ⟦ body; ^ __w() ⟧ ⟧)()
        let start = self.advance().span;
        let prev = self.allow_trailing_block;
        self.allow_trailing_block = false;
        let cond = self.parse_expression();
        self.allow_trailing_block = prev;
        let body = self.parse_block();
        let span = start.merge(body.span);
        // Represent as Call to builtin-like "while_loop" with cond-closure and body-closure
        // Runtime: while_loop(pred_fn, body_fn)
        Stmt::Expr(Expr::Call(CallExpr {
            callee: Box::new(Expr::Ident(Ident {
                name: "while_loop".into(),
                span,
            })),
            args: vec![
                // Dummy param forces closure (not bare block value).
                Expr::Block(Block {
                    params: vec![Param {
                        name: Ident {
                            name: "__".into(),
                            span,
                        },
                        ty: None,
                        span,
                    }],
                    body: vec![Item::Statement(Stmt::Expr(cond))],
                    span,
                }),
                Expr::Block(Block {
                    params: vec![Param {
                        name: Ident {
                            name: "__".into(),
                            span,
                        },
                        ty: None,
                        span,
                    }],
                    body: body.body,
                    span: body.span,
                }),
            ],
            span,
        }))
    }

    fn parse_loop_stmt(&mut self) -> Stmt {
        // loop n ⟦ body ⟧ → range(0,n) → each { |_| body }
        let start = self.advance().span;
        let n = self.parse_expression();
        let body = self.parse_block();
        let span = start.merge(body.span);
        let range_call = Expr::Call(CallExpr {
            callee: Box::new(Expr::Ident(Ident {
                name: "range".into(),
                span,
            })),
            args: vec![
                Expr::Literal(Literal {
                    kind: LitKind::Int(0),
                    span,
                }),
                n,
            ],
            span,
        });
        let stage = Expr::Call(CallExpr {
            callee: Box::new(Expr::Ident(Ident {
                name: "each".into(),
                span,
            })),
            args: vec![Expr::Block(Block {
                params: vec![Param {
                    name: Ident {
                        name: "_".into(),
                        span,
                    },
                    ty: None,
                    span,
                }],
                body: body.body,
                span: body.span,
            })],
            span,
        });
        Stmt::Expr(Expr::Pipeline(PipelineExpr {
            input: Box::new(range_call),
            stages: vec![stage],
            span,
        }))
    }

    fn try_parse_binding_pattern(&mut self) -> Option<Pattern> {
        // Only simple patterns for binding left-hand side at statement level
        if self.check(TokenKind::Ident) {
            return Some(Pattern::Ident(self.parse_ident()));
        }
        if self.check(TokenKind::LBracket) {
            return Some(self.parse_list_pattern());
        }
        if self.check(TokenKind::RecordOpen) {
            return Some(self.parse_record_pattern());
        }
        None
    }

    // ── Expressions ──────────────────────────────────────────

    pub fn parse_expression(&mut self) -> Expr {
        self.parse_pipeline()
    }

    fn parse_pipeline(&mut self) -> Expr {
        let expr = self.parse_conditional();
        let mut stages = Vec::new();
        let start = expr.span();
        while self.check(TokenKind::Arrow) {
            // Disambiguate match arms: if we're inside match block, arms use Arrow
            // At expression level, Arrow is pipeline
            self.advance();
            let stage = self.parse_pipeline_stage();
            stages.push(stage);
        }
        if stages.is_empty() {
            expr
        } else {
            let end = stages.last().map(|s| s.span()).unwrap_or(start);
            Expr::Pipeline(PipelineExpr {
                input: Box::new(expr),
                stages,
                span: start.merge(end),
            })
        }
    }

    fn parse_pipeline_stage(&mut self) -> Expr {
        // member projection: .name
        if self.check(TokenKind::Dot) {
            let start = self.advance().span;
            let field = self.parse_ident();
            let field_span = field.span;
            // Represent as special member on placeholder
            return Expr::Member(MemberExpr {
                object: Box::new(Expr::Placeholder(Placeholder { span: start })),
                field,
                span: start.merge(field_span),
            });
        }
        self.parse_conditional()
    }

    fn parse_conditional(&mut self) -> Expr {
        if self.check(TokenKind::If) {
            let start = self.advance().span;
            let prev = self.allow_trailing_block;
            self.allow_trailing_block = false;
            let condition = self.parse_expression();
            self.allow_trailing_block = prev;
            let then_branch = self.parse_block();
            let else_branch = if self.check(TokenKind::Colon) || self.check(TokenKind::Else) {
                self.advance();
                Some(self.parse_block())
            } else {
                None
            };
            let end = else_branch
                .as_ref()
                .map(|b| b.span)
                .unwrap_or(then_branch.span);
            return Expr::If(IfExpr {
                condition: Box::new(condition),
                then_branch,
                else_branch,
                span: start.merge(end),
            });
        }
        if self.check(TokenKind::Match) {
            return self.parse_match();
        }
        self.parse_coalesce()
    }

    fn parse_match(&mut self) -> Expr {
        let start = self.advance().span;
        // Scrutinee must not swallow the match arms block as a trailing call arg.
        let prev = self.allow_trailing_block;
        self.allow_trailing_block = false;
        let scrutinee = self.parse_expression();
        self.allow_trailing_block = prev;
        // Match body is a block of arms: pattern → expr
        let block_start = self.current_span();
        let open = self.peek_kind();
        if open != TokenKind::BlockOpen && open != TokenKind::LBrace {
            self.error_expected("match block");
            return Expr::Match(MatchExpr {
                scrutinee: Box::new(scrutinee),
                arms: vec![],
                span: start,
            });
        }
        self.advance();
        let mut arms = Vec::new();
        while !self.is_eof() && !self.check(TokenKind::BlockClose) && !self.check(TokenKind::RBrace)
        {
            if self.check(TokenKind::Semicolon) {
                self.advance();
                continue;
            }
            let arm = self.parse_match_arm();
            arms.push(arm);
        }
        if self.check(TokenKind::BlockClose) || self.check(TokenKind::RBrace) {
            self.advance();
        } else {
            self.diagnostics.push(simple_error(
                E012_UNCLOSED_DELIMITER,
                "unclosed match block",
                self.file,
                block_start,
                "expected ⟧ or ]]",
            ));
        }
        let end = self.prev_span();
        Expr::Match(MatchExpr {
            scrutinee: Box::new(scrutinee),
            arms,
            span: start.merge(end),
        })
    }

    fn parse_match_arm(&mut self) -> MatchArm {
        let pattern = self.parse_pattern();
        self.expect(TokenKind::Arrow);
        let body = self.parse_expression();
        let span = pattern_span(&pattern).merge(body.span());
        MatchArm {
            pattern,
            body,
            span,
        }
    }

    fn parse_coalesce(&mut self) -> Expr {
        let mut left = self.parse_or();
        while self.check(TokenKind::Coalesce) {
            self.advance();
            let right = self.parse_or();
            let span = left.span().merge(right.span());
            left = Expr::Coalesce(CoalesceExpr {
                left: Box::new(left),
                right: Box::new(right),
                span,
            });
        }
        left
    }

    fn parse_or(&mut self) -> Expr {
        let mut left = self.parse_xor();
        while self.check(TokenKind::Or) {
            self.advance();
            let right = self.parse_xor();
            let span = left.span().merge(right.span());
            left = Expr::Binary(BinaryExpr {
                op: BinOp::Or,
                left: Box::new(left),
                right: Box::new(right),
                span,
            });
        }
        left
    }

    fn parse_xor(&mut self) -> Expr {
        let mut left = self.parse_and();
        while self.check(TokenKind::Xor) {
            self.advance();
            let right = self.parse_and();
            let span = left.span().merge(right.span());
            left = Expr::Binary(BinaryExpr {
                op: BinOp::Xor,
                left: Box::new(left),
                right: Box::new(right),
                span,
            });
        }
        left
    }

    fn parse_and(&mut self) -> Expr {
        let mut left = self.parse_equality();
        while self.check(TokenKind::And) {
            self.advance();
            let right = self.parse_equality();
            let span = left.span().merge(right.span());
            left = Expr::Binary(BinaryExpr {
                op: BinOp::And,
                left: Box::new(left),
                right: Box::new(right),
                span,
            });
        }
        left
    }

    fn parse_equality(&mut self) -> Expr {
        let mut left = self.parse_comparison();
        while matches!(self.peek_kind(), TokenKind::Eq | TokenKind::NotEq) {
            let op = match self.advance().kind {
                TokenKind::Eq => BinOp::Eq,
                TokenKind::NotEq => BinOp::NotEq,
                _ => unreachable!(),
            };
            let right = self.parse_comparison();
            let span = left.span().merge(right.span());
            left = Expr::Binary(BinaryExpr {
                op,
                left: Box::new(left),
                right: Box::new(right),
                span,
            });
        }
        left
    }

    fn parse_comparison(&mut self) -> Expr {
        let mut left = self.parse_range();
        loop {
            let op = match self.peek_kind() {
                TokenKind::Lt => BinOp::Lt,
                TokenKind::LtEq => BinOp::LtEq,
                TokenKind::Gt => BinOp::Gt,
                TokenKind::GtEq => BinOp::GtEq,
                TokenKind::In => BinOp::In,
                TokenKind::NotIn => BinOp::NotIn,
                _ => break,
            };
            self.advance();
            let right = self.parse_range();
            let span = left.span().merge(right.span());
            left = Expr::Binary(BinaryExpr {
                op,
                left: Box::new(left),
                right: Box::new(right),
                span,
            });
        }
        left
    }

    fn parse_range(&mut self) -> Expr {
        let left = self.parse_term();
        if self.check(TokenKind::Rest) {
            // a..b exclusive
            let start = left.span();
            self.advance();
            let right = self.parse_term();
            let span = start.merge(right.span());
            return Expr::Call(CallExpr {
                callee: Box::new(Expr::Ident(Ident {
                    name: "range".into(),
                    span,
                })),
                args: vec![left, right],
                span,
            });
        }
        if self.check(TokenKind::RangeIncl) {
            // a..=b or a‥b inclusive
            let start = left.span();
            self.advance();
            let right = self.parse_term();
            let span = start.merge(right.span());
            return Expr::Call(CallExpr {
                callee: Box::new(Expr::Ident(Ident {
                    name: "range_incl".into(),
                    span,
                })),
                args: vec![left, right],
                span,
            });
        }
        left
    }

    fn parse_term(&mut self) -> Expr {
        let mut left = self.parse_factor();
        while matches!(self.peek_kind(), TokenKind::Plus | TokenKind::Minus) {
            let op = match self.advance().kind {
                TokenKind::Plus => BinOp::Add,
                TokenKind::Minus => BinOp::Sub,
                _ => unreachable!(),
            };
            let right = self.parse_factor();
            let span = left.span().merge(right.span());
            left = Expr::Binary(BinaryExpr {
                op,
                left: Box::new(left),
                right: Box::new(right),
                span,
            });
        }
        left
    }

    fn parse_factor(&mut self) -> Expr {
        let mut left = self.parse_power();
        while matches!(
            self.peek_kind(),
            TokenKind::Star | TokenKind::Slash | TokenKind::Percent | TokenKind::Idiv
        ) {
            let op = match self.advance().kind {
                TokenKind::Star => BinOp::Mul,
                TokenKind::Idiv => BinOp::Idiv,
                TokenKind::Slash => BinOp::Div,
                TokenKind::Percent => BinOp::Rem,
                _ => unreachable!(),
            };
            let right = self.parse_power();
            let span = left.span().merge(right.span());
            left = Expr::Binary(BinaryExpr {
                op,
                left: Box::new(left),
                right: Box::new(right),
                span,
            });
        }
        left
    }

    fn parse_power(&mut self) -> Expr {
        let left = self.parse_compose();
        if self.check(TokenKind::Power) {
            let start = left.span();
            self.advance();
            let right = self.parse_power(); // right-associative
            let span = start.merge(right.span());
            return Expr::Call(CallExpr {
                callee: Box::new(Expr::Ident(Ident {
                    name: "pow".into(),
                    span,
                })),
                args: vec![left, right],
                span,
            });
        }
        left
    }

    fn parse_compose(&mut self) -> Expr {
        let mut left = self.parse_unary();
        while self.check(TokenKind::Compose) {
            self.advance();
            let right = self.parse_unary();
            let span = left.span().merge(right.span());
            // f ∘ g  →  { |x| f(g(x)) }  represented as call compose(f, g)
            left = Expr::Call(CallExpr {
                callee: Box::new(Expr::Ident(Ident {
                    name: "compose".into(),
                    span,
                })),
                args: vec![left, right],
                span,
            });
        }
        left
    }

    fn parse_unary(&mut self) -> Expr {
        if self.check(TokenKind::Minus) {
            let start = self.advance().span;
            let expr = self.parse_unary();
            let span = start.merge(expr.span());
            return Expr::Unary(UnaryExpr {
                op: UnaryOp::Neg,
                expr: Box::new(expr),
                span,
            });
        }
        if self.check(TokenKind::Not) {
            let start = self.advance().span;
            let expr = self.parse_unary();
            let span = start.merge(expr.span());
            return Expr::Unary(UnaryExpr {
                op: UnaryOp::Not,
                expr: Box::new(expr),
                span,
            });
        }
        if self.check(TokenKind::Effect) {
            let start = self.advance().span;
            let expr = self.parse_unary();
            let span = start.merge(expr.span());
            return Expr::Unary(UnaryExpr {
                op: UnaryOp::Effect,
                expr: Box::new(expr),
                span,
            });
        }
        self.parse_postfix()
    }
